testsuite/tests/parse-errors/escape_error.compilers.reference
Line 8, characters 16-18:
  try foo () with ;;
                  ^^
Error: Syntax error
Line 2, characters 5-6:
  (3 : );;
       ^
Error: Syntax error
Line 2, characters 6-7:
  (3 :> );;
        ^
Error: Syntax error

